<resources>

    <string name="app_name">Dibzit</string>

    <string name="title_activity_timeslots">Pick a Time Slot</string>
    <string name="title_activity_rooms">Pick a Room</string>
    <string name="title_activity_login">Login</string>

    <string name="action_search">Search</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_rememberme">Remember Me</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="label_no_rooms">Sorry no rooms available.</string>
    <string name="label_date">On:</string>
    <string name="label_duration">For:</string>

    <string name="description_roomimage">Thumbnail of the room.</string>

    <array name="duration_array">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </array>

</resources>
